semantic element added

--- a/index.html
+++ b/index.html
@@ -85,62 +85,64 @@
     <!-- header section end -->
 
     <!-- main section start -->
-    <div class="index-main-content">
-        <h3 class="title-style">
-            Our Best Music <span>Classes</span>
-        </h3>
-        <div class="flex-container">
-            <div class="flex-item">
-                <div class="music-image-container">
-                    <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+    <main>
+        <div class="index-main-content">
+            <h3 class="title-style">
+                Our Best Music <span>Classes</span>
+            </h3>
+            <div class="flex-container">
+                <div class="flex-item">
+                    <div class="music-image-container">
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                    </div>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
-                <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+
+                <div class="flex-item">
+                    <div class="music-image-container">
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                    </div>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                </div>
+
+                <div class="flex-item">
+                    <div class="music-image-container">
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                    </div>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                </div>
+
+                <div class="flex-item">
+                    <div class="music-image-container">
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                    </div>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                </div>
             </div>
 
-            <div class="flex-item">
-                <div class="music-image-container">
-                    <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                <div class="quote-container">
+                    <blockquote class="quote-container-child">
+                        <p class="quote-content">When I wrote this code, only God and I understood what I did. Now only God knows..</p>
+                        <p class="quote-cite">-Martin Fowler</p>
+                    </blockquote>
                 </div>
-                <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
-            </div>
 
-            <div class="flex-item">
-                <div class="music-image-container">
-                    <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+            <div class="sign-up-container">
+                <div class="sign-up-child-container center-75">
+                    <div class="sign-up-flex-container center-75">
+                        <div class="sign-up-left-container">
+                            <h4 class="sign-up-title">Call to action! It's time!</h3>
+                                <p class="sign-up-content">Sign up for our product by clicking that button right over there!
+                                </p>
+                        </div>
+                        <div class="sign-up-right-container">
+                            <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
+                        </div>
+                    </div>
                 </div>
-                <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
-            </div>
-
-            <div class="flex-item">
-                <div class="music-image-container">
-                    <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
-                </div>
-                <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
             </div>
         </div>
-
-            <div class="quote-container">
-                <blockquote class="quote-container-child">
-                    <p class="quote-content">When I wrote this code, only God and I understood what I did. Now only God knows..</p>
-                    <p class="quote-cite">-Martin Fowler</p>
-                </blockquote>
-            </div>
-
-        <div class="sign-up-container">
-            <div class="sign-up-child-container center-75">
-                <div class="sign-up-flex-container center-75">
-                    <div class="sign-up-left-container">
-                        <h4 class="sign-up-title">Call to action! It's time!</h3>
-                            <p class="sign-up-content">Sign up for our product by clicking that button right over there!
-                            </p>
-                    </div>
-                    <div class="sign-up-right-container">
-                        <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    </main>
     <!-- main section end -->
 
     <!-- footer section start -->
