nav links active color

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <nav class="sticky-nav">
         <a href="./index.html">
-            <h1>Musical</h1>
+            <h1 class="active">Musical</h1>
         </a>
         <ul>
             <li><a href="./index.html" class="active">Home</a></li>
@@ -68,7 +68,7 @@
             <img src="./assets/icons/menu.svg" alt="menu" class="icons">
             <ul class="hidden-menu">
                 <li></li>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="./index.html" class="active">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
                 <li><a href="./contact.html">Contact</a></li>
@@ -85,7 +85,7 @@
     <!-- header section end -->
 
     <!-- main section start -->
-    <div class="index-main-content">
+    <main class="index-main-content">
         <h3 class="title-style">
             Our Best Music <span>Classes</span>
         </h3>
@@ -119,12 +119,13 @@
             </div>
         </div>
 
-            <div class="quote-container">
-                <blockquote class="quote-container-child">
-                    <p class="quote-content">When I wrote this code, only God and I understood what I did. Now only God knows..</p>
-                    <p class="quote-cite">-Martin Fowler</p>
-                </blockquote>
-            </div>
+        <div class="quote-container">
+            <blockquote class="quote-container-child">
+                <p class="quote-content">When I wrote this code, only God and I understood what I did. Now only God
+                    knows..</p>
+                <p class="quote-cite">-Martin Fowler</p>
+            </blockquote>
+        </div>
 
         <div class="sign-up-container">
             <div class="sign-up-child-container center-75">
@@ -140,7 +141,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
+
     <!-- main section end -->
 
     <!-- footer section start -->
