--- a/blogs.html
+++ b/blogs.html
@@ -69,7 +69,7 @@
                 <li></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
-                <li><a href="./blogs.html">Blog</a></li>
+                <li><a href="./blogs.html" class="active">Blog</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
                     <div class="search-bar">
@@ -262,7 +262,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
     <!-- main section end -->
 
