--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./blogs.html">Blog</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./contact.html" class="active">Contact</a></li>
         </ul>
         <div class="search-bar">
             <input type="search">
