semantic element added

--- a/index.html
+++ b/index.html
@@ -93,30 +93,38 @@
             <div class="flex-container">
                 <div class="flex-item">
                     <div class="music-image-container">
-                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                        <picture>
+                            <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                        </picture>
                     </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
-                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                        <picture>
+                            <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                        </picture>
                     </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
-                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                        <picture>
+                            <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                        </picture>
                     </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
-                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                        <picture>
+                            <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                        </picture>
                     </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam</p>
                 </div>
             </div>
 
