--- a/login.html
+++ b/login.html
@@ -103,6 +103,7 @@
                 </div>
                 <button type="submit" class="btn">Login</button>
             </form>
+            <p>Don't have an account? <a href="./signup.html">signup</a></p>
         </div>
     </div>
 
@@ -111,7 +112,7 @@
     <!-- footer section start -->
     <footer>
         Copyright &copy; The Kreativs 2023
-        
+
         <p><a
             href="https://www.freepik.com/free-vector/beautiful-musical-notes-wave-background-design_1443913.htm#query=music&position=14&from_view=search&track=sph">Image
             by starline</a> on Freepik</p>
