--- a/signup.html
+++ b/signup.html
@@ -111,6 +111,7 @@
                 </div>
                 <button type="submit" class="btn">Sign Up</button>
             </form>
+            <p>Already have an account? <a href="./login.html">login</a></p>
         </div>
     </div>
     <!-- main section end -->
