re-structure of the code, improvement of semantics and removed unnecesary code

--- a/index.html
+++ b/index.html
@@ -85,71 +85,70 @@
     <!-- header section end -->
 
     <!-- main section start -->
-    <main>
-        <div class="index-main-content">
-            <h3 class="title-style">
-                Our Best Music <span>Classes</span>
-            </h3>
-            <div class="flex-container">
-                <div class="flex-item">
-                    <div class="music-image-container">
-                        <picture>
-                            <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
-                        </picture>
-                    </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam</p>
-                </div>
+    <main class="index-main-content">
 
-                <div class="flex-item">
-                    <div class="music-image-container">
-                        <picture>
-                            <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
-                        </picture>
-                    </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam</p>
-                </div>
+        <section class="main-title">
+            <h3 class="main-title-style">We feel the <span>rythm</span></h3>
+        </section>
+        
+        <section class="music-section">
 
-                <div class="flex-item">
-                    <div class="music-image-container">
-                        <picture>
-                            <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
-                        </picture>
-                    </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam</p>
-                </div>
+            <section class="music-container">
+                    <picture>
+                        <img class="music-image-solid" src="./assets/images/indexImages/guitar.jpg" alt="Guitar-icon" />
+                    </picture>
+                <p class="music-content">How to Learn Guitar Quickly and Efficiently</p>
+            </section>
 
-                <div class="flex-item">
-                    <div class="music-image-container">
-                        <picture>
-                            <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
-                        </picture>
-                    </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam</p>
-                </div>
-            </div>
+            <section class="music-container">
+                    <picture>
+                        <img class="music-image-solid" src="./assets/images/indexImages/microphone.jpg" alt="Microphone-icon" />
+                    </picture>
+                <p class="music-content">Top 10 Microphones for your Home Studio</p>
+            </section>
 
-                <div class="quote-container">
-                    <blockquote class="quote-container-child">
-                        <p class="quote-content">When I wrote this code, only God and I understood what I did. Now only God knows..</p>
-                        <p class="quote-cite">-Martin Fowler</p>
-                    </blockquote>
-                </div>
+            <section class="music-container">
+                    <picture>
+                        <img class="music-image-solid" src="./assets/images/indexImages/percussion.jpg" alt="Percussion-icon" />
+                    </picture>
+                <p class="music-content">Where to Buy Quality Folk Drums and Percussion</p>
+            </section>
 
-            <div class="sign-up-container">
-                <div class="sign-up-child-container center-75">
-                    <div class="sign-up-flex-container center-75">
-                        <div class="sign-up-left-container">
-                            <h4 class="sign-up-title">Call to action! It's time!</h3>
-                                <p class="sign-up-content">Sign up for our product by clicking that button right over there!
-                                </p>
-                        </div>
-                        <div class="sign-up-right-container">
-                            <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
-                        </div>
-                    </div>
+            <section class="music-container">
+                    <picture>
+                        <img class="music-image-solid" src="./assets/images/indexImages/dj-device.jpg" alt="DJ-icon" />
+                    </picture>
+                <p class="music-content">Electronic devices for DJs and guidance.</p>
+            </section>
+
+        </section>
+
+        <section class="quote-section">
+            
+            <section class="quote-container">
+                <blockquote class="quote-container-child">
+                    <p class="quote-content">Music gives a soul to the universe, wings to the mind, flight to the imagination, and life to everything.</p>
+                    <p class="quote-cite">-Plato</p>
+                </blockquote>
+            </section>
+
+        </section>
+
+        <section class="sign-up-section">
+
+            <section class="sign-up-container center-75">
+                <div class="sign-up-flex-container center-75">
+                    <section class="sign-up-left-container">
+                        <h4 class="sign-up-title">Call to action! It's time!</h3>
+                        <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
+                    </section>
+                    <section class="sign-up-right-container">
+                        <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
+                    </section>
                 </div>
-            </div>
-        </div>
+            </section>
+
+        </section>
     </main>
     <!-- main section end -->
 
