--- a/assets/layout.html
+++ b/assets/layout.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musical About</title>
+    <title>Musical Blogs</title>
 
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./about.css">
+    <link rel="stylesheet" href="./blogs.css">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,8 +18,11 @@
 </head>
 
 <body>
+    <!-- header section start -->
+
     <header>
         <nav>
+
             <picture>
                 <img src="./assets/icons/music.svg" alt="Homepage" class="icons">
                 <h1>Musical</h1>
@@ -30,13 +32,13 @@
                 <li><a href="./index.html">
                         <figure>
                             <img src="./assets/icons/home.svg" alt="Home page" class="icons">
-                            <figcaption><a href="./index.html">Home</a></figcaption>
+                            <figcaption>Home</figcaption>
                         </figure>
                     </a></li>
                 <li><a href="./about.html">
                         <figure>
                             <img src="./assets/icons/about.svg" alt="Home page" class="icons">
-                            <figcaption><a href="./about.html" class="active">About Us</a></figcaption>
+                            <figcaption>About Us</figcaption>
                         </figure>
                     </a></li>
                 <li>
@@ -72,6 +74,7 @@
                     </ul>
                 </li>
             </ul>
+
             <span class="menu-icon">
                 <figure>
                     <img src="./assets/icons/menu.svg" alt="menu" class="icons">
@@ -80,60 +83,23 @@
                 <ul class="hidden-menu">
 
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./about.html" class="active">About Us</a></li>
-                    <li><a href="./blogs.html">Blog</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./blogs.html" class="active">Blog</a></li>
                     <li><a href="./contact.html">Contact</a></li>
-                    <li><a href="./signup.html">Register</a></li>
-                    <li><a href="./login.html">Login</a></li>
 
                 </ul>
             </span>
         </nav>
     </header>
-    <main>
-        <!-- <section class="contact-hero">
-            <img src="./assets/images/blogs/blogs-hero.jpg" alt="">
-            <div class="title">
-                <h1>About</h1>
-                <h3>Home > About</h3>
-            </div>
-        </section> -->
+    <!-- header section end -->
 
-        <section class="contact-main-content">
-            <aside class="contact-main">
-                <h3 class="text">Welcome to Musical</h3>
-                <p class="text">Welcome to Musical, where the harmonious world of music
-                    unfolds before your very ears. We are a passionate
-                    community of musicians, educators, and enthusiasts dedicated to
-                    nurturing the musical talent within you. Our mission is
-                    simple yet profound: to inspire, educate, and empower individuals on
-                    their musical journey.
-                </p><br>
-                <button class="know-more">Know more about us</button>
-            </aside>
-            <picture>
-                <img src="./assets/images/about-us-image.png" alt="musicians" class="musician-image">
-            </picture>
-        </section>
-        <section class="sign-up-container">
-            <div class="sign-up-child-container center-75">
-                <div class="sign-up-flex-container center-75">
-                    <div class="sign-up-left-container">
-                        <h4 class="sign-up-title">Call to action! It's time!</h4>
-                        <p class="sign-up-content">Sign up for our product by clicking that button right over there!
-                        </p>
-                    </div>
-                    <div class="sign-up-right-container">
-                        <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
 
+
+    <!-- footer section start -->
     <footer>
         Copyright &copy; The Kreativs 2023
     </footer>
+    <!-- footer section end -->
 
 </body>
 
