--- a/login.html
+++ b/login.html
@@ -15,73 +15,87 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
-<body>
-    <nav>
-        <li>
-            <p>Have any question ?</p>
-        </li>
-        <li>
-            <span>
-                <img src="./assets/icons/telephone.svg" alt="" class="icons">
-                <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
-            </span>
-        </li>
-        <li>
-            <span>
-                <img src="./assets/icons/envelope.svg" alt="" class="icons">
-                <a href="mailto:info@support.com">info@example.com</a>
-            </span>
-        </li>
-        <li class="icons-div">
-            <a href="#"><img src="./assets/icons/facebook.svg" alt="" class="icons"></a>
-            <a href="#"><img src="./assets/icons/twitter.svg" alt="" class="icons"></a>
-            <a href="#"><img src="./assets/icons/instagram.svg" alt="" class="icons"></a>
-            <a href="#"><img src="./assets/icons/linkedin.svg" alt="" class="icons"></a>
 
-        </li>
-    </nav>
-    <nav class="sticky-nav">
-        <a href="./index.html">
-            <h1>Musical</h1>
-        </a>
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About Us</a></li>
-            <li><a href="./blogs.html">Blog</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
-        <div class="search-bar">
-            <input type="search">
-            <button><img src="./assets/icons/search.svg" alt="" class="icons"></button>
-        </div>
-        <span class="login-register-icon">
-            <a href="./login.html" style="margin-right: 10px;"><img src="./assets/icons/signin.svg" alt="login"
-                    class="icons"></a>
-            <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
-        </span>
-        <span class="menu-icon">
-            <img src="./assets/icons/menu.svg" alt="menu" class="icons">
-            <ul class="hidden-menu">
-                <li></li>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About Us</a></li>
-                <li><a href="./blogs.html">Blog</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+<body>
+    <header>
+        <nav>
+
+            <picture>
+                <img src="./assets/icons/music.svg" alt="Homepage" class="icons">
+                <h1>Musical</h1>
+            </picture>
+            <span></span>
+            <ul>
+                <li><a href="./index.html">
+                        <figure>
+                            <img src="./assets/icons/home.svg" alt="Home page" class="icons">
+                            <figcaption><a href="./index.html">Home</a></figcaption>
+                        </figure>
+                    </a></li>
+                <li><a href="./about.html">
+                        <figure>
+                            <img src="./assets/icons/about.svg" alt="Home page" class="icons">
+                            <figcaption><a href="./about.html">About Us</a></figcaption>
+                        </figure>
+                    </a></li>
                 <li>
-                    <div class="search-bar">
-                        <input type="search">
-                        <button><img src="./assets/icons/search.svg" class="icons" alt="search"></button>
-                    </div>
+                    <figure>
+                        <img src="./assets/icons/menu.svg" alt="Home page" class="icons">
+                        <figcaption>More</figcaption>
+                    </figure>
+                    <ul class="dropdown">
+                        <li>
+                            <figure>
+                                <img src="./assets/icons/blog.svg" alt="blogs" class="icons">
+                                <figcaption><a href="./blogs.html">Blogs</a></figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./assets/icons/contact.svg" alt="contact" class="icons">
+                                <figcaption><a href="./contact.html">Contact</a></figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img src="./assets/icons/signin.svg" alt="login" class="icons">
+                                <figcaption><a href="./login.html" class="active">Login</a></figcaption>
+                            </figure>
+                        <li>
+                            <figure>
+                                <img src="./assets/icons/register.svg" alt="register" class="icons">
+                                <figcaption><a href="./signup.html">Register</a></figcaption>
+                            </figure>
+                        </li>
+
+                    </ul>
                 </li>
             </ul>
-        </span>
-    </nav>
-    <div class="main-content">
-        <div class="background-image"><img src="./assets/images/signin-image-1.jpg" alt="rythm">
-        </div>
-        <div class="container">
-            <h2>Login</h2>
-            <form action="#" method="post">
+
+            <span class="menu-icon">
+                <figure>
+                    <img src="./assets/icons/menu.svg" alt="menu" class="icons">
+                    <figcaption>Menu</figcaption>
+                </figure>
+                <ul class="hidden-menu">
+
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./blogs.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./signup.html">Register</a></li>
+                    <li><a href="./login.html" class="active">Login</a></li>
+
+                </ul>
+            </span>
+        </nav>
+    </header>
+
+    <main>
+        <section class="container-login">
+            <form>
+                <h2>Login</h2>
+                <br>
                 <div class="input-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" required>
@@ -91,15 +105,16 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn">Login</button>
+                <div class="form-footer">
+                    <p>Don't have an account? <a href="./signup.html">Register</a></p>
+                    <a href="#">Forget Password</a>
+                </div>
             </form>
-            <p>Don't have an account? <a href="./signup.html">signup</a></p>
-        </div>
-    </div>
+        </section>
+    </main>
     <footer>
         Copyright &copy; The Kreativs 2023
-        <p><a
-            href="https://www.freepik.com/free-vector/beautiful-musical-notes-wave-background-design_1443913.htm#query=music&position=14&from_view=search&track=sph">Image
-            by starline</a> on Freepik</p>
     </footer>
 </body>
+
 </html>
