--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <main class="index-main-content">
         <section class="hero">
             <aside>
-                <h1>This website is awesome</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam repellendus, debitis eius recusandae soluta corporis aspernatur aperiam eveniet neque? Nemo, eligendi quibusdam!</p>
+                <h1>Welcome to our musical space</h1>
+                <p>Whether you're looking to learn music, buy instruments, or just stay updated on musical news, this is the space for you!</p>
                 <button>Sign up</button>
             </aside>
             <picture>
