refactorization of code, improved semantics and changes in responsiveness

--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./about.css">
 
-    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -91,17 +90,12 @@
         </nav>
     </header>
     <main>
-        <!-- <section class="contact-hero">
-            <img src="./assets/images/blogs/blogs-hero.jpg" alt="">
-            <div class="title">
-                <h1>About</h1>
-                <h3>Home > About</h3>
-            </div>
-        </section> -->
 
         <section class="contact-main-content">
             <aside class="contact-main">
-                <h3 class="text">Welcome to Musical</h3>
+                <header>
+                    <h3 class="text">Welcome to Musical</h3>
+                </header>
                 <p class="text">Welcome to Musical, where the harmonious world of music
                     unfolds before your very ears. We are a passionate
                     community of musicians, educators, and enthusiasts dedicated to
@@ -115,20 +109,21 @@
                 <img src="./assets/images/about-us-image.png" alt="musicians" class="musician-image">
             </picture>
         </section>
-        <section class="sign-up-container">
-            <div class="sign-up-child-container center-75">
+
+        <section class="sign-up-section">
+            <section class="sign-up-container center-75">
                 <div class="sign-up-flex-container center-75">
-                    <div class="sign-up-left-container">
-                        <h4 class="sign-up-title">Call to action! It's time!</h4>
-                        <p class="sign-up-content">Sign up for our product by clicking that button right over there!
-                        </p>
-                    </div>
-                    <div class="sign-up-right-container">
+                    <section class="sign-up-left-container">
+                        <h4 class="sign-up-title">Call to action! It's time!</h3>
+                        <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
+                    </section>
+                    <section class="sign-up-right-container">
                         <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
-                    </div>
+                    </section>
                 </div>
-            </div>
+            </section>
         </section>
+        
     </main>
 
     <footer>
