--- a/signup.html
+++ b/signup.html
@@ -92,8 +92,10 @@
     <main>
         <section class="container-signup">
             <form>
-                <h2>Sign Up</h2>
-                <br>
+                <header>
+                    <h2>Sign Up</h2>
+                </header>
+                <br/>
                 <div class="input-group">
                     <label for="username">Create a Username</label>
                     <input type="text" id="username" name="username" required>
@@ -111,9 +113,10 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn">Sign Up</button>
-                <div class="form-footer">
+                <section class="form-footer">
                     <p>Already have an account? <a href="./login.html">login</a></p>
-                </div>
+                    <a href="#">Forgot Password</a>
+                </section>
             </form>
         </section>
     </main>
