--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./contact.css">
     <link rel="stylesheet" href="./index.css">
 
-    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -93,16 +92,9 @@
         </nav>
     </header>
 
-    <!-- <div class="contact-hero">
-        <img src="./assets/images/blogs/blogs-hero.jpg" alt="">
-        <div class="title">
-            <h1>Contact</h1>
-            <h3>Home > Contact</h3>
-        </div>
-    </div> -->
     <main>
         <section class="contact-main-content">
-            <div class="contact-main">
+            <section class="contact-main">
                 <form>
                     <input class="input-container" type="text" placeholder="Your Name" required>
                     <input class="input-container" type="email" placeholder="Your Email" required>
@@ -110,9 +102,9 @@
                     <textarea class="textarea-container" placeholder="Type your message here"></textarea>
                     <button class="button-style" type="submit">Send message</button>
                 </form>
-            </div>
-            <div class="contact-sidebar">
-                <div class="container-right">
+            </section>
+            <section class="contact-sidebar">
+                <section class="container-right">
                     <div class="contact-container">
                         <h2 class="contact-title">Company address</h2>
                         <p class="contact-text">Musical, 10001, 5th Avenue, 12202 street, London.</p>
@@ -129,8 +121,8 @@
                         <h2 class="contact-title">Customer Support</h2>
                         <a href="mailto:info@support.com" class="contact-text">info@support.com</a>
                     </div>
-                </div>
-            </div>
+                </section>
+            </section>
         </section>
         <section>
             <iframe src="https://shorturl.at/hoFS0" width="100%" height="450" allowfullscreen="" loading="lazy"
