--- a/login.html
+++ b/login.html
@@ -78,14 +78,12 @@
                     <figcaption>Menu</figcaption>
                 </figure>
                 <ul class="hidden-menu">
-
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About Us</a></li>
                     <li><a href="./blogs.html">Blog</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                     <li><a href="./signup.html">Register</a></li>
                     <li><a href="./login.html" class="active">Login</a></li>
-
                 </ul>
             </span>
         </nav>
@@ -94,8 +92,10 @@
     <main>
         <section class="container-login">
             <form>
-                <h2>Login</h2>
-                <br>
+                <header>
+                    <h2>Login</h2>
+                </header>
+                <br/>
                 <div class="input-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" required>
@@ -105,10 +105,10 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn">Login</button>
-                <div class="form-footer">
+                <section class="form-footer">
                     <p>Don't have an account? <a href="./signup.html">Register</a></p>
-                    <a href="#">Forget Password</a>
-                </div>
+                    <a href="#">Forgot Password</a>
+                </section>
             </form>
         </section>
     </main>
